src/objects/c2g__codaBankAccount__c.object
<CustomObject>
    <customHelpPage>c2g__codahelpbankaccount</customHelpPage>
    <description>Stores master details on company bank accounts.</description>
    <fields>
        <fullName>BW_Remit_bank_name__c</fullName>
        <description>Custom field create so the the customer invoice template pulls throught to the field to revise the bank account name?</description>
        <inlineHelpText>Enter bank account name to pull though to customer invoice.</inlineHelpText>
        <label>BW Remit bank name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Bank_Rec_Frequency__c</fullName>
        <description>Field created to log the frequency of when the bank has been reconciled in order to manage workload</description>
        <inlineHelpText>Frequency that the bank is to be reconciled.</inlineHelpText>
        <label>Bank Rec Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Bi-Annually</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bank_Rec_Owner__c</fullName>
        <description>Field created for listing the name of the person who reconciled the bank</description>
        <inlineHelpText>Name of the individual responsible for bank reconciliation</inlineHelpText>
        <label>Bank Rec Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__AccountName__c</fullName>
        <label>Account Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__AccountNumber__c</fullName>
        <label>Account Number</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__BankAccountCurrency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Account Currency</label>
        <referenceTo>c2g__codaAccountingCurrency__c</referenceTo>
        <relationshipLabel>Bank Accounts</relationshipLabel>
        <relationshipName>BankAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__BankChargesDimension1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Charges Dimension 1</label>
        <referenceTo>c2g__codaDimension1__c</referenceTo>
        <relationshipLabel>Bank Accounts (Bank Charges)</relationshipLabel>
        <relationshipName>BankAccountsBC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__BankChargesDimension2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Charges Dimension 2</label>
        <referenceTo>c2g__codaDimension2__c</referenceTo>
        <relationshipLabel>Bank Accounts (Bank Charges)</relationshipLabel>
        <relationshipName>BankAccountsBC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__BankChargesDimension3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Charges Dimension 3</label>
        <referenceTo>c2g__codaDimension3__c</referenceTo>
        <relationshipLabel>Bank Accounts (Bank Charges)</relationshipLabel>
        <relationshipName>BankAccountsBC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__BankChargesGLA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Charges GLA</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>The selected GLA does not exist or is not valid. It must be a corporate GLA.</errorMessage>
            <filterItems>
                <field>c2g__codaGeneralLedgerAccount__c.c2g__ChartOfAccountsStructure__r.Name</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>c2g__codaGeneralLedgerAccount__c.c2g__ChartOfAccountsStructure__r.c2g__IsCorporate__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Bank Accounts (Bank Charges GLA)</relationshipLabel>
        <relationshipName>BankAccountsBC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__BankName__c</fullName>
        <label>Bank Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__City__c</fullName>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__Country__c</fullName>
        <label>Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__Dimension1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 1</label>
        <referenceTo>c2g__codaDimension1__c</referenceTo>
        <relationshipLabel>Bank Accounts (Dimension 1)</relationshipLabel>
        <relationshipName>Bank_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Dimension2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 2</label>
        <referenceTo>c2g__codaDimension2__c</referenceTo>
        <relationshipLabel>Bank Accounts (Dimension 2)</relationshipLabel>
        <relationshipName>Bank_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Dimension3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 3</label>
        <referenceTo>c2g__codaDimension3__c</referenceTo>
        <relationshipLabel>Bank Accounts (Dimension 3)</relationshipLabel>
        <relationshipName>Bank_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__DirectDebitOriginatorReference__c</fullName>
        <label>Direct Debit Originator Reference</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>c2g__ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>c2g__Fax__c</fullName>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>c2g__GeneralLedgerAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>General Ledger Account</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>The selected GLA does not exist or is not valid. It must be a corporate GLA.</errorMessage>
            <filterItems>
                <field>c2g__codaGeneralLedgerAccount__c.c2g__ChartOfAccountsStructure__r.Name</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>c2g__codaGeneralLedgerAccount__c.c2g__ChartOfAccountsStructure__r.c2g__IsCorporate__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Bank Accounts (General Ledger Account)</relationshipLabel>
        <relationshipName>BankAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__IBANNumber__c</fullName>
        <label>IBAN</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__InterestPaidDimension1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Interest Paid Dimension 1</label>
        <referenceTo>c2g__codaDimension1__c</referenceTo>
        <relationshipLabel>Bank Accounts (Interest Paid)</relationshipLabel>
        <relationshipName>BankAccountsIP</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__InterestPaidDimension2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Interest Paid Dimension 2</label>
        <referenceTo>c2g__codaDimension2__c</referenceTo>
        <relationshipLabel>Bank Accounts (Interest Paid)</relationshipLabel>
        <relationshipName>BankAccountsIP</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__InterestPaidDimension3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Interest Paid Dimension 3</label>
        <referenceTo>c2g__codaDimension3__c</referenceTo>
        <relationshipLabel>Bank Accounts (Interest Paid)</relationshipLabel>
        <relationshipName>BankAccountsIP</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__InterestPaidGLA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Interest Paid GLA</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>The selected GLA does not exist or is not valid. It must be a corporate GLA.</errorMessage>
            <filterItems>
                <field>c2g__codaGeneralLedgerAccount__c.c2g__ChartOfAccountsStructure__r.Name</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>c2g__codaGeneralLedgerAccount__c.c2g__ChartOfAccountsStructure__r.c2g__IsCorporate__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Bank Accounts (Interest Paid GLA)</relationshipLabel>
        <relationshipName>BankAccountsIP</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__InterestReceivedDimension1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Interest Received Dimension 1</label>
        <referenceTo>c2g__codaDimension1__c</referenceTo>
        <relationshipLabel>Bank Accounts (Interest Received)</relationshipLabel>
        <relationshipName>BankAccountsIR</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__InterestReceivedDimension2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Interest Received Dimension 2</label>
        <referenceTo>c2g__codaDimension2__c</referenceTo>
        <relationshipLabel>Bank Accounts (Interest Received)</relationshipLabel>
        <relationshipName>BankAccountsIR</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__InterestReceivedDimension3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Interest Received Dimension 3</label>
        <referenceTo>c2g__codaDimension3__c</referenceTo>
        <relationshipLabel>Bank Accounts (Interest Received)</relationshipLabel>
        <relationshipName>BankAccountsIR</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__InterestReceivedGLA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Interest Received GLA</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>The selected GLA does not exist or is not valid. It must be a corporate GLA.</errorMessage>
            <filterItems>
                <field>c2g__codaGeneralLedgerAccount__c.c2g__ChartOfAccountsStructure__r.Name</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>c2g__codaGeneralLedgerAccount__c.c2g__ChartOfAccountsStructure__r.c2g__IsCorporate__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Bank Accounts (Interest Received GLA)</relationshipLabel>
        <relationshipName>BankAccountsIR</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__OwnerCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>c2g__codaCompany__c</referenceTo>
        <relationshipLabel>Bank Accounts</relationshipLabel>
        <relationshipName>BankAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>c2g__ReportingCode__c</fullName>
        <label>Reporting Code</label>
        <length>24</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>c2g__SWIFTNumber__c</fullName>
        <label>SWIFT Number</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__SortCode__c</fullName>
        <label>Sort Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__StateProvince__c</fullName>
        <label>State/Province</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__Street__c</fullName>
        <label>Street</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>c2g__UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__ZipPostalCode__c</fullName>
        <label>Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffaci__CongaTemplateCheck__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of Conga Template for Check</description>
        <inlineHelpText>ID of Conga Template for Check</inlineHelpText>
        <label>Check Template</label>
        <referenceTo>APXTConga4__Conga_Template__c</referenceTo>
        <relationshipLabel>Bank Accounts</relationshipLabel>
        <relationshipName>BankAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffbf__BankCode__c</fullName>
        <label>Bank Code</label>
        <length>24</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ffbf__BranchNumber__c</fullName>
        <label>Branch Number</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbf__ChargesBankAccountIdentifier__c</fullName>
        <label>Charges Bank Account Identifier</label>
        <length>34</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbf__CodewordNumber10__c</fullName>
        <label>Codeword Number 10</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbf__CodewordNumber1__c</fullName>
        <label>Codeword Number 1</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbf__CodewordNumber2__c</fullName>
        <label>Codeword Number 2</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbf__CodewordText10__c</fullName>
        <label>Codeword Text 10</label>
        <length>29</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbf__CodewordText1__c</fullName>
        <label>Codeword Text 1</label>
        <length>29</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbf__CodewordText2__c</fullName>
        <label>Codeword Text 2</label>
        <length>29</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbf__ConfidentialPayments__c</fullName>
        <label>Confidential Payments</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbf__DebitAccountIdentifier2__c</fullName>
        <formula>If ( c2g__BankAccountCurrency__r.Name = &quot;GBP&quot;, ffbf__DebitAccountIdentifier__c,  ffbf__PaymentBankIndentifier__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Debit Account Identifier2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbf__DebitAccountIdentifier__c</fullName>
        <formula>c2g__SortCode__c &amp; c2g__AccountNumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Debit Account Identifier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbf__ExportFileName__c</fullName>
        <label>Export File Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbf__FXDealRate__c</fullName>
        <label>FX Deal Rate</label>
        <precision>15</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffbf__FXDeal__c</fullName>
        <label>FX Deal</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffbf__IntermediaryBank__c</fullName>
        <label>Intermediary Bank</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbf__PaymentBankIndentifier__c</fullName>
        <label>Payment Bank Indentifier</label>
        <length>34</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbf__PaymentChargesCode__c</fullName>
        <label>Payment Charges Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SHA</fullName>
                    <default>true</default>
                    <label>SHA</label>
                </value>
                <value>
                    <fullName>OUR</fullName>
                </value>
                <value>
                    <fullName>BEN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ffbf__PaymentInstitutionIdentifier__c</fullName>
        <label>Payment Institution Identifier</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbf__RTGSRequired__c</fullName>
        <label>RTGS Required</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ffbf__RemittanceAdvice__c</fullName>
        <label>Remittance Advice</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Bank Account</label>
    <listViews>
        <fullName>FF_100_Bruntwood_Management_Services_L_codaBankAccount</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 100 - Bruntwood Management Services L</label>
        <queue>FF_100_Bruntwood_Management_Services_L</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_106_Bruntwood_Management_Services_3_codaBankAccount</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 106 - Bruntwood Management Services(3</label>
        <queue>FF_106_Bruntwood_Management_Services_3</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_110_Manchester_Science_Partnerships_codaBankAccount</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 110 - Manchester Science Partnerships</label>
        <queue>FF_110_Manchester_Science_Partnerships</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_112_Mi_IDEA_Limited_codaBankAccount</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 112 - Mi-IDEA Limited</label>
        <queue>FF_112_Mi_IDEA_Limited</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_113_Citylabs_2_0_Limited_codaBankAccount</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 113 - Citylabs 2.0 Limited</label>
        <queue>FF_113_Citylabs_2_0_Limited</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_115_Manchester_Technopark_Ltd_codaBankAccount</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 115 - Manchester Technopark Ltd</label>
        <queue>FF_115_Manchester_Technopark_Ltd</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_125_Salford_Innovation_Park_Ltd_codaBankAccount</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 125 - Salford Innovation Park Ltd</label>
        <queue>FF_125_Salford_Innovation_Park_Ltd</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_130_Principal_Agent_Management_Ltd_codaBankAccount</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 130 - Principal Agent Management Ltd</label>
        <queue>FF_130_Principal_Agent_Management_Ltd</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_135_Alderley_Park_Holdings_Ltd_codaBankAccount</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 135 - Alderley Park Holdings Ltd</label>
        <queue>FF_135_Alderley_Park_Holdings_Ltd</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_139_Alderley_Imaging_Limited_codaBankAccount</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 139 - Alderley Imaging Limited</label>
        <queue>FF_139_Alderley_Imaging_Limited</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_140_Alderley_Park_Limited_codaBankAccount</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 140 - Alderley Park Limited</label>
        <queue>FF_140_Alderley_Park_Limited</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_141_Circle_Square_District_Holdings_codaBankAccount</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 141 - Circle Square District Holdings</label>
        <queue>FF_141_Circle_Square_District_Holdings</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_142_Circle_Square_District_Company_codaBankAccount</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 142 - Circle Square District Company</label>
        <queue>FF_142_Circle_Square_District_Company</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_143_Circle_Square_Green_Company_Ltd_codaBankAccount</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 143 - Circle Square Green Company Ltd</label>
        <queue>FF_143_Circle_Square_Green_Company_Ltd</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_144_Bruntwood_Circle_Square_2_Limit_codaBankAccount</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 144 - Bruntwood Circle Square 2 Limit</label>
        <queue>FF_144_Bruntwood_Circle_Square_2_Limit</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Bank Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bank Accounts</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>